--- a/app.json
+++ b/app.json
@@ -24,8 +24,13 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "extra": {
-      "googleFonts": ["Inter_400Regular"]
-    }
+    
+    "plugins": [ [
+      "expo-font",
+      {
+        "fonts": ["node_modules/@expo-google-fonts/inter/Inter_900Black.ttf"]
+      }
+    ]
+    ]
   }
 }
